[package]
name = "cantix"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.66"
shuttle-serenity = "0.20.0"
shuttle-runtime = "0.20.0"
serenity = { version = "0.11.5", default-features = false, features = [
    "client",
    "gateway",
    "rustls_backend",
    "model",
    "voice",
] }
shuttle-secrets = "0.20.0"
tokio = "1.26.0"
tracing = "0.1.37"
dotenvy = "0.15.7"
serde = "1.0.170"
poise = "0.5.2"
env_logger = "0.10.0"
shuttle-poise = "0.20.0"
chatgpt_rs = "1.1.11"
